# rust_mobile_cross_platform_demo

./: Cargo.toml  README.md  build.sh
android_code/: Cargo.toml
android_code/src/: lib.rs
cross_platform_android/: settings.gradle
cross_platform_android/app/: build.gradle
cross_platform_android/app/src/main/: AndroidManifest.xml
cross_platform_android/app/src/main/java/com/cross/platform/: FirstFragment.kt  RustSM4.kt  (+2 more)
cross_platform_android/app/src/main/res/layout/: fragment_first.xml
cross_platform_android/app/src/main/res/menu/: menu_main.xml
cross_platform_android/app/src/main/res/navigation/: nav_graph.xml
cross_platform_android/app/src/main/res/values/: strings.xml  themes.xml
cross_platform_android/app/src/main/res/values-night/: themes.xml
cross_platform_android/app/src/main/res/values-v29/: themes.xml
cross_platform_android/gradle/wrapper/: gradle-wrapper.properties
cross_platform_ios/Shared/: ContentView.swift  cross_platform_iosApp.swift
cross_platform_ios/Tests iOS/: Tests_iOS.swift  Tests_iOSLaunchTests.swift
cross_platform_ios/Tests macOS/: Tests_macOS.swift  Tests_macOSLaunchTests.swift
cross_platform_ios/cross_platform_ios.xcodeproj/: project.pbxproj
cross_platform_ios/cross_platform_ios.xcodeproj/project.xcworkspace/xcuserdata/liuyu.xcuserdatad/: UserInterfaceState.xcuserstate
cross_platform_ios/cross_platform_ios.xcodeproj/xcuserdata/liuyu.xcuserdatad/xcschemes/: xcschememanagement.plist
ios_code/: .gitignore  Cargo.toml  build.rs  build.sh
ios_code/src/: lib.rs
source_code/: Cargo.toml
source_code/src/: lib.rs
(+2 files in other folders)
