[package]
name = "android_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.19.0" }
source_code = { path = '../source_code' }

[lib]
crate-type = ["cdylib"]

[package.metadata.docs.rs]
targets = [
    "aarch64-linux-android",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]